--- a/buscarDocumentosBoot.html
+++ b/buscarDocumentosBoot.html
@@ -61,7 +61,7 @@
                 <li class="nav-item"><a class="nav-link" href="#">
                   <svg class="bi" width="24" height="24"><use xlink:href="#aperture"></use></svg>
                 </a></li>
-                <li class="nav-item"><a class="nav-link" href="IndexBoot.html">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
                 <li class="nav-item"><a class="nav-link" id="subirDocumentos" href="DocumentosBoot.html"  >Documentos</a></li>
                 <li class="nav-item"><a class="nav-link" id="mostrarDocumentosUsuario" href="mostrarDocumentosUsuarioBoot.html" style="display: none;">Mostrar mis Documentos</a></li>
                 <li class="nav-item"><a class="nav-link" id="mostrarDocumentos" href="mostrarDocumentosBoot.html" style="display: none;">Todos los Documentos</a></li>
