--- a/buscarDocumentosBoot.html
+++ b/buscarDocumentosBoot.html
@@ -208,7 +208,7 @@
           localStorage.removeItem("usuario");
 
           // Redirigir a la página de inicio de sesión
-          window.location.href = "indexBoot.html";
+          window.location.href = "index.html";
         });
       } else {
         // Si el usuario no existe, mostrar el enlace de login y ocultar el botón de cerrar sesión
