--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
 
     <div class="form-check text-start my-3">
      <a href="registrar.html">Registrar</a>
-     <a href="IndexBoot.html">Volver</a>
+     <a href="index.html">Volver</a>
     </div>
     <button class="btn btn-primary w-100 py-2" type="submit">INICIAR</button>
     <p class="mt-5 mb-3 text-body-secondary">© 2017–2023</p>
@@ -77,7 +77,7 @@
       const logoutBtn = document.getElementById("logout");
 
       if(usuario != null){
-        window.location.href = "indexBoot.html";
+        window.location.href = "index.html";
       }
 
       if (usuario) {
@@ -99,7 +99,7 @@
           localStorage.removeItem("usuario");
 
           // Redirigir a la página de inicio de sesión
-          window.location.href = "indexBoot.html";
+          window.location.href = "index.html";
         });
       } else {
         // Si el usuario no existe, mostrar el enlace de login y ocultar el botón de cerrar sesión
