--- a/mostrarDocumentosUsuarioBoot.html
+++ b/mostrarDocumentosUsuarioBoot.html
@@ -73,7 +73,7 @@
                 <li class="nav-item"><a class="nav-link" href="#">
                   <svg class="bi" width="24" height="24"><use xlink:href="#aperture"></use></svg>
                 </a></li>
-                <li class="nav-item"><a class="nav-link" href="IndexBoot.html">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
                 <li class="nav-item"><a class="nav-link" id="subirDocumentos" href="DocumentosBoot.html"  >Documentos</a></li>
                 <li class="nav-item"><a class="nav-link" id="mostrarDocumentosUsuario" href="mostrarDocumentosUsuarioBoot.html" style="display: none;">Mostrar mis Documentos</a></li>
                 <li class="nav-item"><a class="nav-link" id="mostrarDocumentos" href="mostrarDocumentosBoot.html" style="display: none;">Todos los Documentos</a></li>
@@ -210,7 +210,7 @@
         localStorage.removeItem("usuario");
 
         // Redirigir a la página de inicio de sesión
-        window.location.href = "indexBoot.html";
+        window.location.href = "index.html";
       });
     } else {
       // Si el usuario no existe, mostrar el enlace de login y ocultar el botón de cerrar sesión
